Fix Nav overlapping content

--- a/register/static/register/css/register.css
+++ b/register/static/register/css/register.css
@@ -183,7 +183,7 @@ body {
     justify-content: center;
     align-items: center;
     height: calc(100vh - 100px);
-    margin-top: 70px;
+    margin-top: 160px;
 }
 
 .register-card{
